style: :art: fix docs and _authenticate function
